* Add support for user specifying environment variables on command line
* Add support for user specifying environment variables via a file
* Fix entrypoint bug to not require an argument if the image specifies an entrypoint
* Fix workdir bug to only use the image workdir when the --workdir option is specified
* Fix user/group acl parsing bug and improve error handling


18.03.0
=========
* Support for Private Repos and user supplied ACLs on private images
* Improved handling of entrypoint, command, and working directory to be more
  compliant with docker.
* Shifter module support to allow user-selectable, site-definable content to
  modify container setup.
* Basic metrics on image usage (number of lookups)
* Add direct image import capability for privileged users
* API to view the current work queue and status
* Minor fixes for RPM builds
* Improved image unpacking for some edge cases
* Dropped celery dependency to simplify installation
* Updated support for Slurm 17.11
* Reduced help output in most error conditions (it was rather verbose)
* Memory management improvements
* Remove kernel module loading support
* Remove support for all base filesystems except squashfs
* Dropped support for systems with legacy pt_chown pty allocation (i.e., sshd can only run as user now)
* Other bug fixes

16.08.5
==========
* Update slurm integration for slurm 17.11 spank modifications
* Update slurm integration to update for Slurm CVE-2017-15566
* Properly exit in slurm integration when dlopen() for libslurm.so fails

16.08.3
==========
* Perform volume mount realpath() and lstat() verification with user privileges,
  to ensure user has access to content at container construction time
* Add shifter_realpath() to calculate user volume mount paths relative to
  alternate root (accounts for symlinks that might inadvertently (or
  intentionally) try to pull user volume mounts out of the container.
* Fix buffer overrun in volume map flag parsing code